Se añaden los métodos getIDSeason, getIDRace y convertDate para poder parsear datos provenientes de la tabla de records en un circuito de los managers de un equipo de GPRO